--- a/src/pages/posts/12steps-group-aiz.mdx
+++ b/src/pages/posts/12steps-group-aiz.mdx
@@ -3,7 +3,7 @@ title: "Добро пожаловать вместе в БКАА"
 description: "Группа АИЗ по 12 шагам БКАА"
 
 pubDate: "05.09.2023"
-img: "https://pbs.twimg.com/media/DchWw7rW0AEAbQd.jpg:large"
+img: "https://www.wealthmanagement.com/sites/wealthmanagement.com/files/aa-meeting.jpg"
 layout: "../../layout/Post.astro"
 ---
 
